<resources>
    <string name="app_name">Memory Matching</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="game_size_title">Game Size</string>
    <string name="game_size_summary">Select the size of game to play</string>
    <string name="game_size_default">2x2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="card_description">Image of the Card</string>
    <string name="reveal_time_title">Reveal Time</string>
    <string name="reveal_time_summary">Number of seconds that an incorrect match will stay revealed</string>
</resources>
